@@ -28,7 +28,9 @@ COMMANDS = OrderedDict([('add',      cmd('(a)dd') + arg('       [type] [subject]
                         ('list',     cmd('(l)ist') + '      list all diary entries'),
                         ('priority', cmd('(p)riority') + arg('  [uid] [0:1]') +
                          ' - Gives or takes priority of an entry. An entry with\n' +
-                         '              priority will appear in bold.'),
+                         '            priority will appear in bold.'),
+                        ('filter',   cmd('(f)ilter') + arg('    [condition]') +
+                         ' - enter filter mode to select multiple entries at once'),
                         ('quit',     cmd('(q)uit') + '      quit CMDiary'),
                         ('help',     cmd('(h)elp') + arg("      [command : 'types' : 'attrs' : 'date']") +
                          ' - display command info'),
@@ -45,10 +47,21 @@ ATTRIBUTES = ['(s)ubject', '(d)escription', '(due)date', '(t)ype', '(p)riority']
 DATE_FORMATTING = '* Dates can be represented by using 1 to 3 numbers, separated by a space ( ), dash (-), or slash' \
                   ' (/) but not a mixture of the three.\n' \
                   '* The numbers represent the day, month and year in that order. If any are omitted, the' \
-                  ' corresponding value from todays date is assumed.\n' \
+                  ' corresponding value from today\'s date is assumed.\n' \
                   '* E.g. entering 12/3 as a date will form the 12th of March in the current year.\n' \
                   '* Similarly, entering just 4 will form the 4th of the current month and year.\n' \
                   '* If a year is specified, it must be in full, 4-digit format or it will not be recognised.'
+
+FILTER_HELP = '* In filter mode, you can specify conditions to select multiple entries.\n' + \
+              '* Conditions are entered in the form ' + arg('[attribute][operator][value]') + '.\n' + \
+              '* Conditions can be entered at the prompt until a selection has been made.\n' + \
+              '* The ' + cmd('remove') +', ' + cmd('edit') + ', ' + cmd('extend') + ' and ' + cmd('priority') + \
+              ' commands can then be used, without the need to specify uids.\n' + \
+              important('Attributes') + ': (u)id, (s)ubject, (d)escription, (due)date, (days)left.\n' + \
+              important('Operators') + ':\n    =    Equal to\n    >    Greater than\n    <    Less than\n' \
+                                       '    :    Contains\n' + \
+              important('Extra Commands:') + '\n ' + cmd('(q)uit') + '  Quit filter mode\n ' + \
+              cmd('(l)ist') + '  List entries currently selected by filter\n ' + cmd('(r)eset') + ' Reset filters'
 
 # Create help strings using the above three lists/strings
 item_types_help = important('Item Types: ') + '{}'.format(', '.join(ITEM_TYPES))
@@ -86,4 +99,6 @@ def get_info(item=None):
         print(COMMANDS[item])
     else:
         cprint("No help section for '{}'. Type 'help' for all CMDiary help info.".format(item), 'yellow')
+    if item == 'filter':
+        print('\n' + FILTER_HELP)
     print()
